minor changes to week1.ipynb

--- a/week1.ipynb
+++ b/week1.ipynb
@@ -110,18 +110,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading  https://github.com/sjmgarnier/R-vs-Python/archive/master.zip -> ./master.zip\n",
-      "[....                          ]   1.469MB\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pods\n",
     "pods.util.download_url('https://github.com/sjmgarnier/R-vs-Python/archive/master.zip')"
@@ -137,7 +128,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import zipfile\n",
@@ -149,7 +142,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import pandas as pd # import the pandas library into a namespace called pd\n",
@@ -184,17 +179,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "film_deaths.describe?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The film deaths data is stored in an object known as a 'data frame'. Data frames come from the statistical family of programming languages based on `S`, the most widely used of which is [`R`](http://en.wikipedia.org/wiki/R_(programming_language)). The data frame gives us a convenient object for manipulating data. The describe method summarizes which columns there are in the data frame and gives us counts, means, standard deviations and percentiles for the values in those columns. To access a column directly we can write"
    ]
   },
   {
@@ -237,7 +227,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "plt.plot?"
@@ -263,7 +255,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here we are using the command `film_deaths['Kill_Count']>200` to index the films in the pandas data frame which have over 200 deaths. To sort them in order we can also use the `sort` command. The result of this command on its own is a data series of `True` and `False` values. However, when it is passed to the `film_deaths` data frame it returns a new data frame which contains only those values for which the data series is `True`. We can also sort the result. To sort the result by the values in the `Kill_Count` column in *descending* order we use the following command."
+    "Here we are using the command `film_deaths['Body_Count']>200` to index the films in the pandas data frame which have over 200 deaths. To sort them in order we can also use the `sort` command. The result of this command on its own is a data series of `True` and `False` values. However, when it is passed to the `film_deaths` data frame it returns a new data frame which contains only those values for which the data series is `True`. We can also sort the result. To sort the result by the values in the `Body_Count` column in *descending* order we use the following command."
    ]
   },
   {
@@ -272,7 +264,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "film_deaths[film_deaths['Body_Count']>200].sort(columns='Body_Count', ascending=False)"
+    "film_deaths[film_deaths['Body_Count']>200].sort_values('Body_Count', ascending=False)"
    ]
   },
   {
@@ -304,7 +296,7 @@
    "metadata": {},
    "source": [
     "### Assignment Question 2 \n",
-    "Read on the internet about the following python libraries: `numpy`, `matplotlib`, `scipy` and `pandas`. What functionality does each provide python. What is the `pylab` library and how does it relate to the other libraries?\n",
+    "Read on the internet about the following python libraries: `numpy`, `matplotlib`, `scipy` and `pandas`. What functionality does each provide in python. What is the `pylab` library and how does it relate to the other libraries?\n",
     "\n",
     "*10 marks*"
    ]
@@ -322,7 +314,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We could try and remove these outliers, but another approach would be plot the logarithm of the counts against the year."
+    "We could try and remove these outliers, but another approach would be to plot the logarithm of the counts against the year."
    ]
   },
   {
@@ -384,7 +376,7 @@
     "P(Y=0) = 1-P(Y=1) = 0.5\n",
     "$$\n",
     "\n",
-    "Probabilities are often defined as the limit of the ratio between the number of positive outcomes (e.g. *heads*) given the number of trials. If the number of positive outcomes for event $y$ is denoted by $n$ and the number of trials is denoted by $N$ then this gives the ratio \n",
+    "Probabilities are often defined as the limit of the ratio between the number of positive outcomes (e.g. *heads*) given the number of trials. If the number of positive outcomes for event $y$ is denoted by $n_y$ and the number of trials is denoted by $N$ then this gives the ratio \n",
     "$$\n",
     "P(Y=y) = \\lim_{N\\rightarrow \\infty}\\frac{n_y}{N}.\n",
     "$$\n",
@@ -403,7 +395,6 @@
    "source": [
     "deaths = (film_deaths.Body_Count>40).sum()  # number of positive outcomes (in sum True counts as 1, False counts as 0)\n",
     "total_films = film_deaths.Body_Count.count()\n",
-    "\n",
     "prob_death = float(deaths)/float(total_films)\n",
     "print(\"Probability of deaths being greather than 40 is:\", prob_death)"
    ]
@@ -436,7 +427,7 @@
    "source": [
     "# Conditioning\n",
     "\n",
-    "When predicting whether a coin turns up head or tails, we might think that this event is *independent* of the year or time of day. If we include an observation such as time, then in a probability this is known as *condtioning*. We use this notation, $P(Y=y|T=t)$, to condition the outcome on a second variable (in this case time). Or, often, for a shorthand we use $P(y|t)$ to represent this distribution (the $Y=$ and $T=$ being implicit). Because we don't believe a coin toss depends on time then we might write that \n",
+    "When predicting whether a coin turns up head or tails, we might think that this event is *independent* of the year or time of day. If we include an observation such as time, then in a probability this is known as *conditioning*. We use this notation, $P(Y=y|T=t)$, to condition the outcome on a second variable (in this case time). Or, often, for a shorthand we use $P(y|t)$ to represent this distribution (the $Y=$ and $T=$ being implicit). Because we don't believe a coin toss depends on time then we might write that \n",
     "$$\n",
     "P(y|t) = p(y).\n",
     "$$\n",
@@ -471,7 +462,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Question 5 Answer Code\n",
@@ -526,7 +519,7 @@
    "source": [
     "### The Product Rule\n",
     "\n",
-    "This number is the joint probability, $P(Y, T)$ which is much *smaller* than the conditional probability. The number can never be bigger than the conditional probabililty because it is computed using the *product rule*.\n",
+    "This number is the joint probability, $P(Y, T)$ which is much *smaller* than the conditional probability. The number can never be bigger than the conditional probability because it is computed using the *product rule*.\n",
     "$$\n",
     "p(Y=y, T=t) = p(Y=y|T=t)p(T=t)\n",
     "$$\n",
@@ -586,7 +579,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Question 6 Answer Code\n",
@@ -603,7 +598,7 @@
     "\n",
     "Bayes rule is a very simple rule, it's hardly worth the name of a rule at all. It follows directly from the product rule of probability. Because $P(y, t) = P(y|t)P(t)$ and by symmetry $P(y,t)=P(t,y)=P(t|y)P(y)$ then by equating these two equations and dividing through by $P(y)$ we have\n",
     "$$\n",
-    "P(t|y) = \\frac{P(y|t)P(t)}{P(y)}\n",
+    "P(t|y) = \\frac{P(y|t)P(t)}{P(y)},\n",
     "$$\n",
     "which is known as Bayes' rule (or Bayes's rule, it depends how you choose to pronounce it). It's not difficult to derive, and its importance is more to do with the semantic operation that it enables. Each of these probability distributions represents the answer to a question we have about the world. Bayes rule (via the product rule) tells us how to *invert* the probability."
    ]
@@ -655,7 +650,7 @@
    "source": [
     "## Assignment Questions\n",
     "\n",
-    "The questions in the above lab sheet need to be answered and handed in before 09:00 on 7th October 2014 (i.e. before next lecture). The hand should be done via file upload through [MOLE](http://vle.shef.ac.uk). "
+    "The questions in the above lab sheet need to be answered and handed in before 23:59 on 5th October 2018. The hand should be done via file upload through [MOLE](https://www.sheffield.ac.uk/cics/mole). "
    ]
   },
   {
@@ -709,13 +704,6 @@
     "from IPython.display import YouTubeVideo\n",
     "YouTubeVideo('GX8VLYUYScM')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
